// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Articles Container component matches snapshot 1`] = `
<section
  className="coin-articles"
>
  <h2>
    More On Numismatics
  </h2>
  <hr />
  <ul>
    <li
      className="article-item"
    >
      <img
        alt="Austria’s Named Best Gold Coin at 2020 COTY Awards"
        src="https://donaldscarinci.com/wp-content/uploads/2020/01/Austria-Alfred-Alder-50-Euro-Gold.png"
      />
      <div
        className="article-content"
      >
        <h5>
          Austria’s Named Best Gold Coin at 2020 COTY Awards
        </h5>
        <p>
          The Austrian Mint won the “Best Gold Coin” category at 2020 Coin of the Year (COTY) Awards for its 50 Euro honoring Alfred Adler. The winning coin, dated 2018, is part of a three-coin series that celebrates the pioneering schools of psychotherapy. The other coins in
        </p>
        <a
          href="https://donaldscarinci.com/austrias-named-best-gold-coin-at-2020-coty-awards/"
          rel="noopener"
          target="_blank"
        >
          Read Full Article &gt;&gt;
        </a>
      </div>
    </li>
    <li
      className="article-item"
    >
      <img
        alt="Austria’s Named Best Gold Coin at 2020 COTY Awards"
        src="https://donaldscarinci.com/wp-content/uploads/2020/01/Austria-Alfred-Alder-50-Euro-Gold.png"
      />
      <div
        className="article-content"
      >
        <h5>
          Austria’s Named Best Gold Coin at 2020 COTY Awards
        </h5>
        <p>
          The Austrian Mint won the “Best Gold Coin” category at 2020 Coin of the Year (COTY) Awards for its 50 Euro honoring Alfred Adler. The winning coin, dated 2018, is part of a three-coin series that celebrates the pioneering schools of psychotherapy. The other coins in
        </p>
        <a
          href="https://donaldscarinci.com/austrias-named-best-gold-coin-at-2020-coty-awards/"
          rel="noopener"
          target="_blank"
        >
          Read Full Article &gt;&gt;
        </a>
      </div>
    </li>
    <li
      className="article-item"
    >
      <img
        alt="Austria’s Named Best Gold Coin at 2020 COTY Awards"
        src="https://donaldscarinci.com/wp-content/uploads/2020/01/Austria-Alfred-Alder-50-Euro-Gold.png"
      />
      <div
        className="article-content"
      >
        <h5>
          Austria’s Named Best Gold Coin at 2020 COTY Awards
        </h5>
        <p>
          The Austrian Mint won the “Best Gold Coin” category at 2020 Coin of the Year (COTY) Awards for its 50 Euro honoring Alfred Adler. The winning coin, dated 2018, is part of a three-coin series that celebrates the pioneering schools of psychotherapy. The other coins in
        </p>
        <a
          href="https://donaldscarinci.com/austrias-named-best-gold-coin-at-2020-coty-awards/"
          rel="noopener"
          target="_blank"
        >
          Read Full Article &gt;&gt;
        </a>
      </div>
    </li>
    <li
      className="article-item"
    >
      <img
        alt="Austria’s Named Best Gold Coin at 2020 COTY Awards"
        src="https://donaldscarinci.com/wp-content/uploads/2020/01/Austria-Alfred-Alder-50-Euro-Gold.png"
      />
      <div
        className="article-content"
      >
        <h5>
          Austria’s Named Best Gold Coin at 2020 COTY Awards
        </h5>
        <p>
          The Austrian Mint won the “Best Gold Coin” category at 2020 Coin of the Year (COTY) Awards for its 50 Euro honoring Alfred Adler. The winning coin, dated 2018, is part of a three-coin series that celebrates the pioneering schools of psychotherapy. The other coins in
        </p>
        <a
          href="https://donaldscarinci.com/austrias-named-best-gold-coin-at-2020-coty-awards/"
          rel="noopener"
          target="_blank"
        >
          Read Full Article &gt;&gt;
        </a>
      </div>
    </li>
    <li
      className="article-item"
    >
      <img
        alt="Austria’s Named Best Gold Coin at 2020 COTY Awards"
        src="https://donaldscarinci.com/wp-content/uploads/2020/01/Austria-Alfred-Alder-50-Euro-Gold.png"
      />
      <div
        className="article-content"
      >
        <h5>
          Austria’s Named Best Gold Coin at 2020 COTY Awards
        </h5>
        <p>
          The Austrian Mint won the “Best Gold Coin” category at 2020 Coin of the Year (COTY) Awards for its 50 Euro honoring Alfred Adler. The winning coin, dated 2018, is part of a three-coin series that celebrates the pioneering schools of psychotherapy. The other coins in
        </p>
        <a
          href="https://donaldscarinci.com/austrias-named-best-gold-coin-at-2020-coty-awards/"
          rel="noopener"
          target="_blank"
        >
          Read Full Article &gt;&gt;
        </a>
      </div>
    </li>
  </ul>
</section>
`;

exports[`Articles Item component matches snapshot 1`] = `
<li
  className="article-item"
>
  <img
    alt="Austria’s Named Best Gold Coin at 2020 COTY Awards"
    src="https://donaldscarinci.com/wp-content/uploads/2020/01/Austria-Alfred-Alder-50-Euro-Gold.png"
  />
  <div
    className="article-content"
  >
    <h5>
      Austria’s Named Best Gold Coin at 2020 COTY Awards
    </h5>
    <p>
      The Austrian Mint won the “Best Gold Coin” category at 2020 Coin of the Year (COTY) Awards for its 50 Euro honoring Alfred Adler. The winning coin, dated 2018, is part of a three-coin series that celebrates the pioneering schools of psychotherapy. The other coins in
    </p>
    <a
      href="https://donaldscarinci.com/austrias-named-best-gold-coin-at-2020-coty-awards/"
      rel="noopener"
      target="_blank"
    >
      Read Full Article &gt;&gt;
    </a>
  </div>
</li>
`;
